--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -787,7 +787,7 @@ table {
 
 /* line 14, ../scss/application.scss */
 html {
-  background: transparent url("/images/sand.jpg") repeat;
+  background: transparent url("../images/sand.jpg") repeat;
   font-family: "proxima-nova";
 }
 
@@ -797,7 +797,7 @@ header {
   width: 100%;
   margin: 0;
   padding: 1px 0;
-  background: transparent url("/images/water.png") no-repeat left top;
+  background: transparent url("../images/water.png") no-repeat left top;
   text-align: center;
 }
 @media screen and (max-width: 1600px) {
@@ -1102,7 +1102,7 @@ svg {
   width: 100%;
   height: 180px;
   z-index: 10;
-  background: transparent url("/images/sand-shadow.png") no-repeat top center;
+  background: transparent url("../images/sand-shadow.png") no-repeat top center;
   background-size: 100% auto;
 }
 @media screen and (min-width: 1500px) {
