--- a/2014/scss/application.scss
+++ b/2014/scss/application.scss
@@ -12,7 +12,7 @@
 @include border-box-sizing;
 
 html{
-  background: transparent url('/images/sand.jpg') repeat;
+  background: transparent url('../images/sand.jpg') repeat;
   font-family: "proxima-nova";
 }
 
@@ -21,7 +21,7 @@ header{
   width: 100%;
   margin: 0;
   padding: 1px 0;
-  background: transparent url('/images/water.png') no-repeat left top;
+  background: transparent url('../images/water.png') no-repeat left top;
   text-align: center;
 
   @media screen and (max-width: 1600px){
@@ -190,7 +190,7 @@ svg{
     width: 100%;
     height: 180px;
     z-index: 10;
-    background: transparent url('/images/sand-shadow.png') no-repeat top center;
+    background: transparent url('../images/sand-shadow.png') no-repeat top center;
     background-size: 100% auto;
 
     @media screen and (min-width: 1500px){
