more design updates

--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -844,16 +844,21 @@ html {
 }
 
 /* line 18, ../scss/application.scss */
+body {
+  position: relative;
+}
+
+/* line 21, ../scss/application.scss */
 a {
   color: #2da4cc;
   text-decoration: none;
 }
-/* line 21, ../scss/application.scss */
+/* line 24, ../scss/application.scss */
 a:hover {
   color: #a00;
 }
 
-/* line 25, ../scss/application.scss */
+/* line 28, ../scss/application.scss */
 header {
   display: block;
   margin: 0 0 24px;
@@ -862,12 +867,12 @@ header {
   text-align: center;
 }
 @media screen and (max-width: 1600px) {
-  /* line 25, ../scss/application.scss */
+  /* line 28, ../scss/application.scss */
   header {
     background-size: 100% auto;
   }
 }
-/* line 37, ../scss/application.scss */
+/* line 40, ../scss/application.scss */
 header h1 {
   display: block;
   width: 100%;
@@ -875,7 +880,7 @@ header h1 {
   padding: 8% 0 0 0;
   margin: 0;
 }
-/* line 44, ../scss/application.scss */
+/* line 47, ../scss/application.scss */
 header h1 a {
   display: block;
   color: #a00;
@@ -886,46 +891,46 @@ header h1 a {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 @media screen and (max-width: 900px) {
-  /* line 44, ../scss/application.scss */
+  /* line 47, ../scss/application.scss */
   header h1 a {
     font-size: 80px;
   }
 }
 @media screen and (max-width: 800px) {
-  /* line 44, ../scss/application.scss */
+  /* line 47, ../scss/application.scss */
   header h1 a {
     font-size: 70px;
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 44, ../scss/application.scss */
+  /* line 47, ../scss/application.scss */
   header h1 a {
     font-size: 60px;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 44, ../scss/application.scss */
+  /* line 47, ../scss/application.scss */
   header h1 a {
     font-size: 50px;
   }
 }
 @media screen and (max-width: 500px) {
-  /* line 44, ../scss/application.scss */
+  /* line 47, ../scss/application.scss */
   header h1 a {
     font-size: 40px;
   }
 }
-/* line 59, ../scss/application.scss */
+/* line 62, ../scss/application.scss */
 header h1 a span {
   display: block;
 }
-/* line 61, ../scss/application.scss */
+/* line 64, ../scss/application.scss */
 header h1 a:before {
   content: "";
   margin: 0 auto 20px auto;
 }
 @media screen and (min-width: 900px) {
-  /* line 61, ../scss/application.scss */
+  /* line 64, ../scss/application.scss */
   header h1 a:before {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: 0 -789px;
@@ -936,7 +941,7 @@ header h1 a:before {
   }
 }
 @media screen and (min-width: 900px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 900px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 900px) and (min-device-pixel-ratio: 2) {
-  /* line 61, ../scss/application.scss */
+  /* line 64, ../scss/application.scss */
   header h1 a:before {
     background-position: 0 -789px;
     -webkit-background-size: 444px auto;
@@ -947,7 +952,7 @@ header h1 a:before {
   }
 }
 @media screen and (min-width: 600px) and (max-width: 900px) {
-  /* line 61, ../scss/application.scss */
+  /* line 64, ../scss/application.scss */
   header h1 a:before {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: 0 -450px;
@@ -959,7 +964,7 @@ header h1 a:before {
   }
 }
 @media screen and (min-width: 600px) and (max-width: 900px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 600px) and (max-width: 900px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 600px) and (max-width: 900px) and (min-device-pixel-ratio: 2) {
-  /* line 61, ../scss/application.scss */
+  /* line 64, ../scss/application.scss */
   header h1 a:before {
     background-position: 0 -450px;
     -webkit-background-size: 444px auto;
@@ -970,7 +975,7 @@ header h1 a:before {
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 61, ../scss/application.scss */
+  /* line 64, ../scss/application.scss */
   header h1 a:before {
     background-image: url("../images/sprites-2x-s49afbe8350.png");
     background-position: 0 -410px;
@@ -982,31 +987,31 @@ header h1 a:before {
     width: 64px;
   }
 }
-/* line 79, ../scss/application.scss */
+/* line 82, ../scss/application.scss */
 header h2 {
   color: rgba(0, 0, 0, 0.6);
   font-weight: 500;
 }
 @media screen and (max-width: 700px) {
-  /* line 82, ../scss/application.scss */
+  /* line 85, ../scss/application.scss */
   header h2 a {
     display: block;
   }
 }
-/* line 93, ../scss/application.scss */
+/* line 96, ../scss/application.scss */
 header h3.twitter a {
   font-size: 24px;
   text-decoration: none;
   font-weight: 300;
 }
 
-/* line 103, ../scss/application.scss */
+/* line 106, ../scss/application.scss */
 .home p {
   padding-left: 20px;
   padding-right: 20px;
 }
 
-/* line 107, ../scss/application.scss */
+/* line 110, ../scss/application.scss */
 p.large {
   color: rgba(0, 0, 0, 0.6);
   max-width: 640px;
@@ -1017,20 +1022,20 @@ p.large {
   text-align: center;
 }
 @media screen and (max-width: 700px) {
-  /* line 107, ../scss/application.scss */
+  /* line 110, ../scss/application.scss */
   p.large {
     font-size: 20px;
     font-weight: 400;
   }
 }
-/* line 118, ../scss/application.scss */
+/* line 121, ../scss/application.scss */
 p.large + p {
   max-width: 552px;
   margin: 0 auto;
   padding-bottom: .8em;
 }
 
-/* line 125, ../scss/application.scss */
+/* line 128, ../scss/application.scss */
 .button {
   display: inline-block;
   font-weight: 300;
@@ -1048,13 +1053,13 @@ p.large + p {
   text-decoration: none;
   text-align: center;
 }
-/* line 137, ../scss/application.scss */
+/* line 140, ../scss/application.scss */
 .button:hover {
   color: #a00;
   border-color: #a00;
 }
 @media screen and (max-width: 700px) {
-  /* line 125, ../scss/application.scss */
+  /* line 128, ../scss/application.scss */
   .button {
     font-size: 24px;
     font-weight: 400;
@@ -1066,7 +1071,7 @@ p.large + p {
   }
 }
 
-/* line 142, ../scss/application.scss */
+/* line 145, ../scss/application.scss */
 .lightbox {
   display: none;
   background: rgba(0, 0, 0, 0.6);
@@ -1076,11 +1081,11 @@ p.large + p {
   bottom: 0;
   left: 0;
 }
-/* line 148, ../scss/application.scss */
+/* line 151, ../scss/application.scss */
 .lightbox:target {
   display: block;
 }
-/* line 150, ../scss/application.scss */
+/* line 153, ../scss/application.scss */
 .lightbox .lightbox-content {
   position: absolute;
   height: 540px;
@@ -1093,7 +1098,7 @@ p.large + p {
   -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
-/* line 160, ../scss/application.scss */
+/* line 163, ../scss/application.scss */
 .lightbox .lightbox-content a.close {
   display: block;
   position: absolute;
@@ -1112,7 +1117,7 @@ p.large + p {
   -o-border-radius: 12px;
   border-radius: 12px;
 }
-/* line 172, ../scss/application.scss */
+/* line 175, ../scss/application.scss */
 .lightbox .lightbox-content a.close:before {
   content: "\00d7";
   display: block;
@@ -1126,14 +1131,14 @@ p.large + p {
   text-indent: 0;
 }
 
-/* line 193, ../scss/application.scss */
+/* line 196, ../scss/application.scss */
 svg {
   width: 100%;
   z-index: 10;
   position: relative;
 }
 
-/* line 201, ../scss/application.scss */
+/* line 204, ../scss/application.scss */
 .image-gallery {
   overflow: hidden;
   position: relative;
@@ -1141,7 +1146,7 @@ svg {
   height: 0;
   padding-top: 45%;
 }
-/* line 208, ../scss/application.scss */
+/* line 211, ../scss/application.scss */
 .image-gallery:before {
   content: "";
   display: block;
@@ -1155,12 +1160,12 @@ svg {
   background-size: 100% auto;
 }
 @media screen and (min-width: 1500px) {
-  /* line 208, ../scss/application.scss */
+  /* line 211, ../scss/application.scss */
   .image-gallery:before {
     background-size: 100% 100%;
   }
 }
-/* line 226, ../scss/application.scss */
+/* line 229, ../scss/application.scss */
 .image-gallery figure {
   display: block;
   position: absolute;
@@ -1169,14 +1174,14 @@ svg {
   bottom: 0;
   left: 0;
 }
-/* line 232, ../scss/application.scss */
+/* line 235, ../scss/application.scss */
 .image-gallery img {
   display: block;
   position: absolute;
   top: 0;
   width: 100%;
 }
-/* line 239, ../scss/application.scss */
+/* line 242, ../scss/application.scss */
 .image-gallery figcaption {
   display: block;
   position: absolute;
@@ -1188,40 +1193,91 @@ svg {
   -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
-/* line 248, ../scss/application.scss */
+/* line 251, ../scss/application.scss */
 .image-gallery figcaption a {
   color: white;
 }
-/* line 251, ../scss/application.scss */
+/* line 254, ../scss/application.scss */
 .image-gallery figcaption:hover {
   background: #2da4cc;
 }
-/* line 254, ../scss/application.scss */
+/* line 257, ../scss/application.scss */
 .image-gallery figcaption span {
   font-size: 14px;
   color: rgba(255, 255, 255, 0.6);
 }
 
-/* line 261, ../scss/application.scss */
+/* line 264, ../scss/application.scss */
 .page {
   max-width: 1280px;
   padding: 0;
   margin: 0 auto;
 }
-/* line 265, ../scss/application.scss */
+/* line 268, ../scss/application.scss */
 .page iframe {
   border: none;
   height: 640px !important;
 }
 
-/* line 270, ../scss/application.scss */
+/* line 273, ../scss/application.scss */
 .buy-tickets {
   max-width: 640px;
   margin: 0 auto 48px;
-  padding: 0 20px;
+  padding: 36px 20px 24px;
+  position: relative;
 }
-/* line 275, ../scss/application.scss */
+/* line 279, ../scss/application.scss */
+.buy-tickets:before {
+  position: absolute;
+  content: "";
+  background-image: url('../images/sprites-s81af367ff4.png');
+  background-position: -29px 0;
+  background-repeat: no-repeat;
+  display: block;
+  height: 32px;
+  width: 61px;
+  left: 50%;
+  top: 0;
+  margin-left: -30px;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3 / 2), (min-device-pixel-ratio: 2) {
+  /* line 279, ../scss/application.scss */
+  .buy-tickets:before {
+    background-position: 0 0;
+    -webkit-background-size: 444px auto;
+    -moz-background-size: 444px auto;
+    -o-background-size: 444px auto;
+    background-size: 444px auto;
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+  }
+}
+/* line 287, ../scss/application.scss */
 .buy-tickets iframe {
   max-width: 640px;
-  margin: 0 auto 24px;
+  margin: 12px auto 24px;
+}
+
+/* line 296, ../scss/application.scss */
+.tickets:before {
+  position: absolute;
+  content: "";
+  top: 3em;
+  right: 1.5em;
+  background-image: url('../images/sprites-s81af367ff4.png');
+  background-position: 0 -368px;
+  background-repeat: no-repeat;
+  display: block;
+  height: 82px;
+  width: 81px;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3 / 2), (min-device-pixel-ratio: 2) {
+  /* line 296, ../scss/application.scss */
+  .tickets:before {
+    background-position: 0 -368px;
+    -webkit-background-size: 444px auto;
+    -moz-background-size: 444px auto;
+    -o-background-size: 444px auto;
+    background-size: 444px auto;
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+  }
 }
