--- a/2014/scss/application.scss
+++ b/2014/scss/application.scss
@@ -15,6 +15,9 @@
 html{
   background: transparent url('../images/sand.jpg') repeat;
 }
+body {
+	position: relative;
+}
 a {
 	color: $blue;
 	text-decoration: none;
@@ -271,12 +274,30 @@ svg{
 //	text-align: center
 	max-width: 640px;
 	margin: 0 auto 48px;
-	padding: 0 20px;
+	padding: 36px 20px 24px;
+	position: relative;
+	&:before {
+		position: absolute;
+		content: "";
+		@include sprite-background("specs");
+		left: 50%;
+		top: 0;
+		margin-left: -30px;
+	}
 	iframe {
 		max-width: 640px;
-		margin: 0 auto 24px;
+		margin: 12px auto 24px;
 	}
 }
 #event {
 //	padding: 0 1em;
+}
+.tickets {
+	&:before {
+		position: absolute;
+		content: "";
+		top: 3em;
+		right: 1.5em;
+		@include sprite-background('starfish');	
+	}
 }
