--- a/2014/scss/application.scss
+++ b/2014/scss/application.scss
@@ -220,10 +220,9 @@ svg{
     background: transparent url('../images/sand-shadow.png') no-repeat top center;
     background-size: 100% auto;
 
-    @media screen and (min-width: 1500px){
-      background-size: 100% 100%;
-
-    }
+    // @media screen and (min-width: 1500px){
+    //   background-size: 100% 100%;
+    // }
   }
 
   figure{
@@ -262,7 +261,7 @@ svg{
 }
 
 .page {
-	max-width: 1280px;
+	// max-width: 1280px;
 	padding: 0;
 	margin: 0 auto;
 	iframe {
@@ -271,7 +270,6 @@ svg{
 	}
 }
 .buy-tickets {
-//	text-align: center
 	max-width: 640px;
 	margin: 0 auto 48px;
 	padding: 36px 20px 24px;
@@ -287,10 +285,11 @@ svg{
 	iframe {
 		max-width: 640px;
 		margin: 12px auto 24px;
+    @include box-shadow(0 0 6px 0 rgba(black, 0.3));
+    @include border-radius(4px);
 	}
 }
 #event {
-//	padding: 0 1em;
 }
 .tickets {
 	&:before {
